--
-- Baseline schema for EduSchedule
-- Reflects full entity state prior to Epic 1 migrations
--

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';
SET default_table_access_method = heap;

-- ============================================================
-- TABLES
-- ============================================================

CREATE TABLE public.users (
    id bigint NOT NULL,
    username character varying(255) NOT NULL,
    password character varying(255) NOT NULL
);

CREATE TABLE public.refresh_tokens (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    token character varying(512) NOT NULL,
    expires_at timestamp without time zone NOT NULL,
    created_at timestamp without time zone DEFAULT now()
);

CREATE TABLE public.teachers (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    full_name character varying(100) NOT NULL,
    type character varying(20) NOT NULL,
    max_periods_per_week integer NOT NULL,
    is_active boolean DEFAULT true,
    created_at timestamp(6) without time zone,
    CONSTRAINT teachers_type_check CHECK (((type)::text = ANY ((ARRAY['BO_MON'::character varying, 'CHU_NHIEM'::character varying, 'KHAC'::character varying])::text[])))
);

CREATE TABLE public.subjects (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    name character varying(100) NOT NULL,
    short_name character varying(100),
    periods_grade1 integer DEFAULT 0,
    periods_grade2 integer DEFAULT 0,
    periods_grade3 integer DEFAULT 0,
    periods_grade4 integer DEFAULT 0,
    periods_grade5 integer DEFAULT 0
);

CREATE TABLE public.teacher_subjects (
    teacher_id bigint NOT NULL,
    subject_id bigint NOT NULL
);

CREATE TABLE public.special_rooms (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    name character varying(100) NOT NULL,
    subject_id bigint,
    quantity integer NOT NULL DEFAULT 1
);

CREATE TABLE public.school_years (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    start_year integer NOT NULL
);

CREATE TABLE public.classes (
    id bigint NOT NULL,
    name character varying(10) NOT NULL,
    grade integer NOT NULL,
    homeroom_teacher_id bigint,
    school_year_id bigint
);

CREATE TABLE public.assignments (
    id bigint NOT NULL,
    class_id bigint,
    subject_id bigint,
    teacher_id bigint
);

CREATE TABLE public.timetables (
    id bigint NOT NULL,
    school_year_id bigint NOT NULL,
    semester_order integer NOT NULL,
    name character varying(255),
    status character varying(255) NOT NULL DEFAULT 'DRAFT',
    off_day integer,
    off_session integer,
    published_at timestamp(6) without time zone,
    created_at timestamp(6) without time zone
);

CREATE TABLE public.slots (
    id bigint NOT NULL,
    timetable_id bigint,
    assignment_id bigint,
    day integer,
    period integer
);

-- ============================================================
-- SEQUENCES
-- ============================================================

ALTER TABLE public.users ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.refresh_tokens ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.refresh_tokens_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.teachers ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.teachers_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.subjects ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.subjects_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.special_rooms ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.special_rooms_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.school_years ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.school_years_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.classes ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.classes_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.assignments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.assignments_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.timetables ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.timetables_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE public.slots ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.slots_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

-- ============================================================
-- PRIMARY KEYS
-- ============================================================

ALTER TABLE ONLY public.users ADD CONSTRAINT users_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.refresh_tokens ADD CONSTRAINT refresh_tokens_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.teachers ADD CONSTRAINT teachers_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.subjects ADD CONSTRAINT subjects_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.teacher_subjects ADD CONSTRAINT teacher_subjects_pkey PRIMARY KEY (teacher_id, subject_id);
ALTER TABLE ONLY public.special_rooms ADD CONSTRAINT special_rooms_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.school_years ADD CONSTRAINT school_years_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.classes ADD CONSTRAINT classes_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.assignments ADD CONSTRAINT assignments_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.timetables ADD CONSTRAINT timetables_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_pkey PRIMARY KEY (id);

-- ============================================================
-- UNIQUE CONSTRAINTS
-- ============================================================

ALTER TABLE ONLY public.users ADD CONSTRAINT users_username_uq UNIQUE (username);
ALTER TABLE ONLY public.refresh_tokens ADD CONSTRAINT refresh_tokens_token_uq UNIQUE (token);
ALTER TABLE ONLY public.school_years ADD CONSTRAINT school_years_user_year_uq UNIQUE (user_id, start_year);
ALTER TABLE ONLY public.classes ADD CONSTRAINT classes_name_year_uq UNIQUE (name, school_year_id);
ALTER TABLE ONLY public.assignments ADD CONSTRAINT assignments_class_subject_teacher_uq UNIQUE (class_id, subject_id, teacher_id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_timetable_day_period_uq UNIQUE (timetable_id, day, period);

-- ============================================================
-- FOREIGN KEYS
-- ============================================================

ALTER TABLE ONLY public.refresh_tokens ADD CONSTRAINT refresh_tokens_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id);
ALTER TABLE ONLY public.teachers ADD CONSTRAINT teachers_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id);
ALTER TABLE ONLY public.subjects ADD CONSTRAINT subjects_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id);
ALTER TABLE ONLY public.teacher_subjects ADD CONSTRAINT teacher_subjects_teacher_id_fkey FOREIGN KEY (teacher_id) REFERENCES public.teachers(id);
ALTER TABLE ONLY public.teacher_subjects ADD CONSTRAINT teacher_subjects_subject_id_fkey FOREIGN KEY (subject_id) REFERENCES public.subjects(id);
ALTER TABLE ONLY public.special_rooms ADD CONSTRAINT special_rooms_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id);
ALTER TABLE ONLY public.special_rooms ADD CONSTRAINT special_rooms_subject_id_fkey FOREIGN KEY (subject_id) REFERENCES public.subjects(id);
ALTER TABLE ONLY public.school_years ADD CONSTRAINT school_years_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id);
ALTER TABLE ONLY public.classes ADD CONSTRAINT classes_school_year_id_fkey FOREIGN KEY (school_year_id) REFERENCES public.school_years(id);
ALTER TABLE ONLY public.classes ADD CONSTRAINT classes_homeroom_teacher_id_fkey FOREIGN KEY (homeroom_teacher_id) REFERENCES public.teachers(id);
ALTER TABLE ONLY public.assignments ADD CONSTRAINT assignments_class_id_fkey FOREIGN KEY (class_id) REFERENCES public.classes(id);
ALTER TABLE ONLY public.assignments ADD CONSTRAINT assignments_subject_id_fkey FOREIGN KEY (subject_id) REFERENCES public.subjects(id);
ALTER TABLE ONLY public.assignments ADD CONSTRAINT assignments_teacher_id_fkey FOREIGN KEY (teacher_id) REFERENCES public.teachers(id);
ALTER TABLE ONLY public.timetables ADD CONSTRAINT timetables_school_year_id_fkey FOREIGN KEY (school_year_id) REFERENCES public.school_years(id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_timetable_id_fkey FOREIGN KEY (timetable_id) REFERENCES public.timetables(id);
ALTER TABLE ONLY public.slots ADD CONSTRAINT slots_assignment_id_fkey FOREIGN KEY (assignment_id) REFERENCES public.assignments(id);
